################################################################################
#	Name       : Makefile
#	Author     : Didier Barvaux <didier@barvaux.org>
#	Description: create the IP/ROHC client and server
################################################################################

SUBDIRS = \
	common \
	client \
	server

